translated terms of use

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -225,5 +225,24 @@
   "privacy-policy-4-desc-2": "قد تتم مشاركة البيانات مع الشركاء التعليميين ومعالجات الدفع عند الضرورة.",
   "privacy-policy-5-title": "5. حقوق المستخدم",
   "privacy-policy-5-desc-1": "يمكن للمستخدمين طلب الوصول إلى بياناتهم الشخصية أو تعديلها أو حذفها.",
-  "privacy-policy-5-desc-2": "يمكن للمستخدمين إلغاء الاشتراك في الاتصالات التسويقية في أي وقت."
+  "privacy-policy-5-desc-2": "يمكن للمستخدمين إلغاء الاشتراك في الاتصالات التسويقية في أي وقت.",
+
+  "terms-title": "شروط الاستخدام",
+  "terms-1-title": "1. مقدمة",
+  "terms-1-desc": "مرحبًا بكم في 'رؤى المستقبل'، وهي منصة إلكترونية تقدم خدمات التدريب والاستشارات وحلول الأعمال القائمة على البيانات. باستخدام خدماتنا، فإنك توافق على الالتزام بشروط الاستخدام هذه. إذا كنت تستخدم منصة...",
+  "terms-2-title": "2. مسؤوليات المستخدم",
+  "terms-2-desc-1": "يجب على المستخدمين تقديم معلومات دقيقة ومحدثة أثناء التسجيل.",
+  "terms-2-desc-2": "يُحظر تمامًا الاستخدام غير المصرح به أو المشاركة أو نقل الحسابات.",
+  "terms-2-desc-3": "يجب على المستخدمين الامتثال لجميع القوانين والمبادئ التوجيهية الأخلاقية المعمول بها عند المشاركة في أنشطة الاستشارة أو التدريب أو التعلم.",
+  "terms-3-title": "3. الملكية الفكرية",
+  "terms-3-desc-1": "جميع المحتويات، بما في ذلك الدورات ومواد الاستشارة وورش العمل والمنهجيات الملكية، هي ملك لشركة Future Insights أو المرخصين لها وهي محمية بموجب قوانين حقوق النشر والملكية الفكرية.",
+  "terms-3-desc-2": "لا يجوز للمستخدمين إعادة إنتاج أو توزيع أو تعديل أي محتوى دون الحصول على إذن كتابي مسبق.",
+  "terms-4-title": "4. سياسة الدفع والاسترداد",
+  "terms-4-desc-1": "يجب سداد رسوم خدمات الاستشارة وجلسات التدريب والدورات التدريبية عبر الإنترنت وبرامج التعلم المدمج بالكامل قبل منح الوصول",
+  "terms-4-desc-2-1": "سيتم إجراء عملية استرداد الأموال وفقًا لـ",
+  "terms-4-desc-2-link": "سياسة استرداد الأموال",
+  "terms-4-desc-2-2": "وتخضع للمراجعة بناءً على استخدام الخدمة وحالة التسليم.",
+  "terms-5-title": "5. الإنهاء",
+  "terms-5-desc-1": "نحتفظ بالحق في تعليق أو إنهاء الحسابات التي تنتهك شروط الاستخدام هذه.",
+  "terms-5-desc-2": "يمكن للمستخدمين طلب حذف حساباتهم في أي وقت. مع ذلك، لن تُرد المبالغ المدفوعة عند إنهاء الخدمة إلا إذا نصّت سياسة الاسترداد صراحةً على ذلك."
 }
