--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -244,5 +244,19 @@
   "terms-4-desc-2-2": "وتخضع للمراجعة بناءً على استخدام الخدمة وحالة التسليم.",
   "terms-5-title": "5. الإنهاء",
   "terms-5-desc-1": "نحتفظ بالحق في تعليق أو إنهاء الحسابات التي تنتهك شروط الاستخدام هذه.",
-  "terms-5-desc-2": "يمكن للمستخدمين طلب حذف حساباتهم في أي وقت. مع ذلك، لن تُرد المبالغ المدفوعة عند إنهاء الخدمة إلا إذا نصّت سياسة الاسترداد صراحةً على ذلك."
+  "terms-5-desc-2": "يمكن للمستخدمين طلب حذف حساباتهم في أي وقت. مع ذلك، لن تُرد المبالغ المدفوعة عند إنهاء الخدمة إلا إذا نصّت سياسة الاسترداد صراحةً على ذلك.",
+
+  "support-title": "الدعم",
+  "support-1-title": "1. الاتصال بالدعم",
+  "support-1-desc-1": "• في حالة وجود مشكلات فنية أو استفسارات حول الحساب أو دعم الفواتير، اتصل بنا على",
+  "support-1-desc-2": "info@futureinsights.ae",
+  "support-1-desc-3": "• الدعم متاح",
+  "support-1-desc-4": "24/7",
+  "support-2-title": "2. الأسئلة الشائعة ومركز المساعدة",
+  "support-2-desc-1": "• يمكن للمستخدمين العثور على إجابات للأسئلة الشائعة في مركز المساعدة الخاص بنا على",
+  "support-2-desc-2": "مركز المساعدة",
+  "support-3-title": "3. وقت الاستجابة",
+  "support-3-desc-1": "• يسعى فريقنا إلى الرد على الاستفسارات في غضون",
+  "support-3-desc-2": "5",
+  "support-3-desc-3": "أيام العمل."
 }
