added transactions page and translated it

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -18,6 +18,7 @@
   "nav-5": "لوحة التحكم",
   "nav-6": "كن مدرباً",
   "nav-7": "المستخدمين",
+  "nav-8": "المعاملات",
 
   "login": "تسجيل الدخول",
   "signup": "التسجيل",
@@ -258,5 +259,11 @@
   "support-3-title": "3. وقت الاستجابة",
   "support-3-desc-1": "• يسعى فريقنا إلى الرد على الاستفسارات في غضون",
   "support-3-desc-2": "5",
-  "support-3-desc-3": "أيام العمل."
+  "support-3-desc-3": "أيام العمل.",
+
+  "transactions-title": "معاملاتي",
+  "transactions-not-found": "لم يتم العثور على أي معاملات.",
+  "course": "الدورة:",
+  "tracking_id": "معرف التتبع:",
+  "date": "تاريخ:"
 }
