fixed home screen translation error

--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -24,7 +24,7 @@
   "signup": "Sign up",
 
   "our-mission": "Our Mission",
-  "our-mission-text": "Empowering leaders to make a sustainable and positive impact",
+  "our-mission-text-1": "Empowering leaders to make a sustainable and positive impact",
   "our-mission-text-2": "within their organizations through high-quality Training & Consultation.",
 
   "we-are": "We are Future Insights",
