added accreditation banner

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -265,5 +265,8 @@
   "transactions-not-found": "لم يتم العثور على أي معاملات.",
   "course": "الدورة:",
   "tracking_id": "معرف التتبع:",
-  "date": "تاريخ:"
+  "date": "تاريخ:",
+
+  "accreditation-banner-title": "الاعتماد الدولي من قبل مكتب معايير التطوير المهني المستمر - المملكة المتحدة",
+  "accreditation-banner-slogan": "في Future Insights، نحن معتمدون رسميًا من قبل مكتب معايير التطوير المهني المستمر - المملكة المتحدة، وهي هيئة معترف بها عالميًا ملتزمة بوضع أعلى المعايير في التطوير المهني المستمر"
 }
