--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -265,5 +265,8 @@
   "transactions-not-found": "No transactions found.",
   "course": "Course:",
   "tracking_id": "Tracking_id:",
-  "date": "Date:"
+  "date": "Date:",
+
+  "accreditation-banner-title": "International Accreditation by the CPD standards office - UK",
+  "accreditation-banner-slogan": "At Future Insights, we are officially accredited by the CPD Standards Office - United Kingdom, a globally recognized body committed to setting the highest benchmarks in Continuing Professional Development"
 }
