added cpd home section

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -268,5 +268,14 @@
   "date": "تاريخ:",
 
   "accreditation-banner-title": "الاعتماد الدولي من قبل مكتب معايير التطوير المهني المستمر - المملكة المتحدة",
-  "accreditation-banner-slogan": "في Future Insights، نحن معتمدون رسميًا من قبل مكتب معايير التطوير المهني المستمر - المملكة المتحدة، وهي هيئة معترف بها عالميًا ملتزمة بوضع أعلى المعايير في التطوير المهني المستمر"
+  "accreditation-banner-slogan": "في Future Insights، نحن معتمدون رسميًا من قبل مكتب معايير التطوير المهني المستمر - المملكة المتحدة، وهي هيئة معترف بها عالميًا ملتزمة بوضع أعلى المعايير في التطوير المهني المستمر",
+
+  "provider-reference-title": "رقم مرجع مقدم الخدمة: 22929",
+  "provider-reference-p1": "يعكس هذا الاعتماد جودة برامجنا التدريبية وأهميتها وقيمتها العالمية. سواءً كنت تحضر دورة تدريبية متقدمة عبر الإنترنت أو دورة تنفيذية حضورية، كن على ثقة بأن تجربة التعلم الخاصة بك تُلبي معايير التطوير المهني المستمر المعتمدة دوليًا.",
+  "provider-reference-p2": "ندعو جميع مندوبينا وشركائنا وزوارنا لاستكشاف ملفنا الرسمي على دليل مكتب معايير التطوير المهني المستمر. هناك، يمكنكم:",
+  "provider-reference-s1": "استكشف اعتمادنا ورقم المرجع الخاص بنا",
+  "provider-reference-s2": "اقرأ وصفًا كاملاً لدوراتنا المعتمدة",
+  "provider-reference-s3": "اقرأ المزيد عن الاعتراف بساعات التطوير المهني المستمر عالميًا",
+
+  "learn-more": "اكتشف المزيد"
 }
