added accreditation link to header

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -19,6 +19,7 @@
   "nav-6": "كن مدرباً",
   "nav-7": "المستخدمين",
   "nav-8": "المعاملات",
+  "nav-9": "الاعتماد",
 
   "login": "تسجيل الدخول",
   "signup": "التسجيل",
