--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -19,6 +19,7 @@
   "nav-6": "Become an Instructor",
   "nav-7": "Users",
   "nav-8": "Transactions",
+  "nav-9": "Accreditation",
 
   "login": "Login",
   "signup": "Sign up",
