--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -282,5 +282,8 @@
   "cpd-accreditation-p1": "تفخر شركة فيوتشر إنسايتس للاستشارات الإدارية ذ.م.م. بكونها مزودًا معتمدًا رسميًا من قبل مكتب معايير التطوير المهني المستمر - المملكة المتحدة، وتحمل رقم مرجع المزود: 22929. يعزز هذا الاعتماد المرموق التزامنا الراسخ بتقديم أعلى معايير التدريب المهني والتطوير التنفيذي.",
   "cpd-accreditation-p2": "جميع برامجنا التدريبية - سواءً كانت تُقدم عبر الإنترنت أو حضوريًا - معتمدة بالكامل من قِبل مكتب معايير التطوير المهني المستمر، وهو أحد أكثر هيئات الاعتماد احترامًا في العالم في مجال التطوير المهني المستمر. تُمنح كل دورة تُكملها معنا ساعات معتمدة للتطوير المهني المستمر، وهي معترف بها دوليًا ومؤهلة تمامًا لمتطلبات التطوير المهني المستمر الخاصة بجهتك المهنية، بما في ذلك المؤسسات المعتمدة والهيئات التنظيمية وهيئات الترخيص في مجموعة واسعة من الصناعات والمهن.",
 
+  "cpd-why-matters-1": "لماذا هذا مهم بالنسبة لك",
+  "cpd-why-matters-2": "من خلال إكمال أي دورة تدريبية حول الرؤى المستقبلية، ستحصل على:",
+
   "learn-more": "اكتشف المزيد"
 }
