--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -282,5 +282,8 @@
   "cpd-accreditation-p1": "Future Insights for Management Consultancies Co. LLC is proud to be an officially accredited provider by the CPD Standards Office - United Kingdom, holding Provider Reference Number: 22929. This prestigious accreditation reinforces our unwavering commitment to delivering the highest standards of professional training and executive development.",
   "cpd-accreditation-p2": "All of our training programmes - whether delivered online or in-person - are fully accredited by the CPD Standards Office, one of the most respected accreditation bodies in the world for Continuing Professional Development. Every course you complete with us is awarded CPD credit hours, which are internationally recognized and fully eligible towards your professional body's CPD requirements, including chartered institutions, regulatory authorities, and licensing boards across a wide range of industries and professions",
 
+  "cpd-why-matters-1":"Why This Matters for You",
+  "cpd-why-matters-2":"By completing any Future Insights Training Course, you gain:",
+
   "learn-more": "Learn More"
 }
