added gains section

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -285,5 +285,12 @@
   "cpd-why-matters-1": "لماذا هذا مهم بالنسبة لك",
   "cpd-why-matters-2": "من خلال إكمال أي دورة تدريبية حول الرؤى المستقبلية، ستحصل على:",
 
+  "gains-1-title": "شهادة CPD الرسمية",
+  "gains-1-text": "مع ساعات التطوير المهني المستمر المعتمدة",
+  "gains-2-title": "الاعتراف بالوفاء",
+  "gains-2-text": "كجزء من التزامات التطوير المهني المستمر السنوية الخاصة بك مع الهيئة المهنية أو الصناعية المعنية.",
+  "gains-3-title": "التدريب القائم على الأدلة",
+  "gains-3-text": "متوافق مع أفضل الممارسات العالمية في التعليم التنفيذي والقيادة الاستراتيجية.",
+
   "learn-more": "اكتشف المزيد"
 }
