added exclusive cpd

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -292,5 +292,11 @@
   "gains-3-title": "التدريب القائم على الأدلة",
   "gains-3-text": "متوافق مع أفضل الممارسات العالمية في التعليم التنفيذي والقيادة الاستراتيجية.",
 
+  "cpd-exclusive-title": "فرصة حصرية للحصول على زمالة التطوير المهني المستمر",
+  "cpd-exclusive-text": "في إطار التزامنا بنموكم المستمر، يسرّنا في 'فيوتشر إنسايتس' أن نقدم لكم زمالة مجانية لمدة عام واحد في مكتب معايير التطوير المهني المستمر لكل مندوب يُكمل دورة تدريبية معنا. تتيح هذه الميزة الحصرية للمشاركين فرصة:",
+  "cpd-exclusive-s1": "الاعتراف رسميًا باعتبارك زميلًا في التطوير المهني المستمر (FCPD).",
+  "cpd-exclusive-s2": "انضم إلى مجتمع عالمي من محترفي التطوير المهني المستمر وقادة الفكر.",
+  "cpd-exclusive-s3": "تعزيز مصداقيتهم المهنية وتقدمهم الوظيفي.",
+
   "learn-more": "اكتشف المزيد"
 }
