--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -292,5 +292,11 @@
   "gains-3-title": "Evidence-based training",
   "gains-3-text": "aligned with global best practices in executive education and strategic leadership.",
 
+  "cpd-exclusive-title": "Exclusive CPD Fellowship Opportunity",
+  "cpd-exclusive-text": "As a further commitment to your continuous growth, Future Insights is pleased to offer a one-year complimentary Fellowship in the CPD Standards Office for every delegate who completes a course with us. This exclusive benefit provides our participants with an opportunity to:",
+  "cpd-exclusive-s1": "Be formally recognized as a CPD Fellow (FCPD).",
+  "cpd-exclusive-s2": "Join a global community of CPD professionals and thought leaders.",
+  "cpd-exclusive-s3": "Enhance their professional credibility and career progression.",
+
   "learn-more": "Learn More"
 }
