added external cpd links

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -298,5 +298,6 @@
   "cpd-exclusive-s2": "انضم إلى مجتمع عالمي من محترفي التطوير المهني المستمر وقادة الفكر.",
   "cpd-exclusive-s3": "تعزيز مصداقيتهم المهنية وتقدمهم الوظيفي.",
 
-  "learn-more": "اكتشف المزيد"
+  "learn-more": "اكتشف المزيد",
+  "visit": "زيارة"
 }
