--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -298,5 +298,6 @@
   "cpd-exclusive-s2": "Join a global community of CPD professionals and thought leaders.",
   "cpd-exclusive-s3": "Enhance their professional credibility and career progression.",
 
-  "learn-more": "Learn More"
+  "learn-more": "Learn More",
+  "visit": "Visit"
 }
