added new course accreditation

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -298,6 +298,13 @@
   "cpd-exclusive-s2": "انضم إلى مجتمع عالمي من محترفي التطوير المهني المستمر وقادة الفكر.",
   "cpd-exclusive-s3": "تعزيز مصداقيتهم المهنية وتقدمهم الوظيفي.",
 
+  "course-showcase-accreditation-title": "الاعتماد والاعتراف الدولي",
+  "course-showcase-accreditation-text": "في Future Insights، نفخر بكوننا جهة معتمدة من مكتب معايير التطوير المهني المستمر (CPD) في المملكة المتحدة (رقم مرجع الجهة: 22929)، مما يضمن استيفاء برامجنا التدريبية لمعايير التطوير المهني المعترف بها عالميًا. صُممت كل دورة من دوراتنا بعناية لتلبية الاحتياجات المتغيرة لبيئة الأعمال الديناميكية اليوم، وتزويد المهنيين الطموحين بالمهارات العملية والأطر الاستراتيجية والرؤى العالمية اللازمة للقيادة والتقدم الوظيفي. عند الحضور الكامل وإتمام التقييم النهائي بنجاح، سيحصل المشاركون على شهادتين معترف بهما دوليًا:",
+  "course-showcase-accreditation-bullet-1": "1. شهادة حضور التطوير المهني المستمر الصادرة عن مكتب معايير التطوير المهني المستمر - المملكة المتحدة، والتي تثبت ساعات التطوير المهني المستمر المعتمدة المكتسبة.",
+  "course-showcase-accreditation-bullet-2": "2. شهادة إنجاز من شركة Future Insights - الإمارات العربية المتحدة، تعكس التزامنا بالتعليم التنفيذي عالي الجودة.",
+  "course-showcase-accreditation-text-2": "تُقدم هذه الشهادة المزدوجة قيمةً ملموسةً في مختلف القطاعات والمناطق الجغرافية، مما يُساعد المهنيين على تعزيز محفظتهم المهنية، والسعي وراء الترقيات الداخلية، واستيفاء متطلبات التطوير المهني المستمر لهيئة الترخيص، وتعزيز مكانتهم في سوق العمل العالمي. إنها أكثر من مجرد شهادة، بل هي نقطة تحول استراتيجية في رحلة نموك المهني وقيادتك.",
+
   "learn-more": "اكتشف المزيد",
-  "visit": "زيارة"
+  "visit": "زيارة",
+  "enroll-confirmation": "هل أنت متأكد أنك تريد التسجيل في"
 }
