--- a/client/src/assets/locales/en.json
+++ b/client/src/assets/locales/en.json
@@ -298,6 +298,13 @@
   "cpd-exclusive-s2": "Join a global community of CPD professionals and thought leaders.",
   "cpd-exclusive-s3": "Enhance their professional credibility and career progression.",
 
+  "course-showcase-accreditation-title": "International Accreditation & Recognition",
+  "course-showcase-accreditation-text": "At Future Insights, we are proud to be an accredited provider by the CPD Standards Office - UK (Provider Ref: 22929), ensuring our training programmes meet globally recognized standards of professional development. Each of our courses is carefully designed to address the evolving needs of today's dynamic business landscape, empowering ambitious professionals with the practical skills, strategic frameworks, and global insights essential for leadership and career advancement. Upon full attendance and successful completion of the final assessment, participants will receive two internationally recognized certificates:",
+  "course-showcase-accreditation-bullet-1": "1. A CPD Certificate of Attendance issued by the CPD Standards Office - United Kingdom, verifying accredited CPD hours earned.",
+  "course-showcase-accreditation-bullet-2": "2. A Certificate of Achievement from Future Insights - United Arab Emirates, reflecting our commitment to high-quality executive education.",
+  "course-showcase-accreditation-text-2": "This dual certification offers tangible value across industries and geographies, helping professionals strengthen their portfolios, pursue internal promotions, meet licensing body CPD requirements, and position themselves for global opportunities. More than just a credential, it's a strategic milestone in your professional growth and leadership journey.",
+
   "learn-more": "Learn More",
-  "visit": "Visit"
+  "visit": "Visit",
+  "enroll-confirmation": "Are you sure you want to enroll in"
 }
