fixed course catgory logo for arabic layout - small changes to text arabic

--- a/client/src/assets/locales/ar.json
+++ b/client/src/assets/locales/ar.json
@@ -273,7 +273,7 @@
 
   "provider-reference-title": "رقم مرجع مقدم الخدمة: 22929",
   "provider-reference-p1": "يعكس هذا الاعتماد جودة برامجنا التدريبية وأهميتها وقيمتها العالمية. سواءً كنت تحضر دورة تدريبية متقدمة عبر الإنترنت أو دورة تنفيذية حضورية، كن على ثقة بأن تجربة التعلم الخاصة بك تُلبي معايير التطوير المهني المستمر المعتمدة دوليًا.",
-  "provider-reference-p2": "ندعو جميع مندوبينا وشركائنا وزوارنا لاستكشاف ملفنا الرسمي على دليل مكتب معايير التطوير المهني المستمر. هناك، يمكنكم:",
+  "provider-reference-p2": "ندعو جميع متدربينا  وشركائنا وزوارنا لاستكشاف ملفنا الرسمي على دليل مكتب معايير التطوير المهني المستمر. هناك، يمكنكم:",
   "provider-reference-s1": "استكشف اعتمادنا ورقم المرجع الخاص بنا",
   "provider-reference-s2": "اقرأ وصفًا كاملاً لدوراتنا المعتمدة",
   "provider-reference-s3": "اقرأ المزيد عن الاعتراف بساعات التطوير المهني المستمر عالميًا",
@@ -293,7 +293,7 @@
   "gains-3-text": "متوافق مع أفضل الممارسات العالمية في التعليم التنفيذي والقيادة الاستراتيجية.",
 
   "cpd-exclusive-title": "فرصة حصرية للحصول على زمالة التطوير المهني المستمر",
-  "cpd-exclusive-text": "في إطار التزامنا بنموكم المستمر، يسرّنا في 'فيوتشر إنسايتس' أن نقدم لكم زمالة مجانية لمدة عام واحد في مكتب معايير التطوير المهني المستمر لكل مندوب يُكمل دورة تدريبية معنا. تتيح هذه الميزة الحصرية للمشاركين فرصة:",
+  "cpd-exclusive-text": "في إطار التزامنا بنموكم المستمر، يسرّنا في 'فيوتشر إنسايتس' أن نقدم لكم زمالة مجانية لمدة عام واحد في مكتب معايير التطوير المهني المستمر لكل متدرب يُكمل دورة تدريبية معنا. تتيح هذه الميزة الحصرية للمشاركين فرصة:",
   "cpd-exclusive-s1": "الاعتراف رسميًا باعتبارك زميلًا في التطوير المهني المستمر (FCPD).",
   "cpd-exclusive-s2": "انضم إلى مجتمع عالمي من محترفي التطوير المهني المستمر وقادة الفكر.",
   "cpd-exclusive-s3": "تعزيز مصداقيتهم المهنية وتقدمهم الوظيفي.",
